# eolo-station

./: README.md
Eolo Firmware/: .cproject  .project  CMakeLists.txt  Makefile  SIM800l example  project.mk
Eolo Firmware/eolo/: Makefile
Eolo Firmware/eolo/inc/: Eeprom.h  FreeRTOSConfig.h  control.h  gpio.h  http.h  log.h  main.h  modem.h  print.h  rain_sensor.h  rtc.h  string_utils.h  trigonometry.h  uart.h  utils.h  webservice.h  wind_direction_sensor.h  wind_speed_sensor.h
Eolo Firmware/eolo/src/: Eeprom.c  control.c  gpio.c  http.c  log.c  main.c  modem.c  print.c  rain_sensor.c  rtc.c  string_utils.c  uart.c  webservice.c  wind_direction_sensor.c  wind_speed_sensor.c
Eolo Firmware/examples/tcpecho/inc/: FreeRTOSConfig.h
Eolo Firmware/modules/lpc1769/board/inc/: board.h
Eolo Firmware/modules/lpc1769/freertos/inc/: FreeRTOS.h
Eolo Firmware/modules/lpc4337_m0/board/src/: board.c
Eolo Firmware/modules/lpc4337_m4/base/src/: cr_startup_lpc43xx.c
Eolo Firmware/modules/lpc4337_m4/freertos/inc/: FreeRTOS.h
Eolo Firmware/modules/lpc4337_m4/sapi/inc/: sapi_gpio.h  sapi_uart.h
Eolo Firmware/modules/lpc4337_m4/sapi/src/: sapi_tick.c  sapi_uart.c
Eolo Firmware/modules/lpc54102_m4/freertos/inc/: FreeRTOS.h
Eolo Firmware/sapi_examples/edu-ciaa-nxp/sapi_adc_dac_01/src/: adc_dac.c
Eolo Firmware/sapi_examples/edu-ciaa-nxp/sapi_gpio_01_switches_leds/src/: switches_leds.c
Eolo Firmware/sapi_examples/edu-ciaa-nxp/sapi_gpio_02_blinky/src/: blinky.c
Eolo Firmware/sapi_examples/edu-ciaa-nxp/sapi_gpio_03_blinky_switch/src/: blinky_switch.c
(+30 files in other folders)
